--- a/public/index.html
+++ b/public/index.html
@@ -4,5 +4,10 @@
 </head>
 <body>
     <p>welcome to socket app</p>
+    <script src="/socket.io/socket.io.js">
+    </script>
+    <script src="/index.js">
+        
+    </script>
 </body>
 </html>
